--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ archive: true
     </section>
 </article>
 <footer id="post-meta" class="clearfix">
-    <a href="http://twitter.com/{{ site.authorTwitter }}">
+    <a href="/about">
         <img class="avatar" src="/assets/images/avatar.png">
         <div>
             <span class="dark">{{ site.author }}</span>
