--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ archive: true
 <article class="post">
     <header>
         <h1>{{ page.title }}</h1>
+        <h2 class="headline">{{ page.description}}</h2>
         <h2 class="headline">{{ page.date | date:"%B %-d, %Y" }}</h2>
     </header>
     <section id="post-body">
