--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if page.url != "/contact/" %}
-            <a href='{{ site.baseurl }}about'>Contact </a>
+            <a href='{{ site.baseurl }}contact'>Contact </a>
     {% endif %}
 
     <a class="cta" href="{{ site.baseurl }}feed.xml">Subscribe</a>
